# losa

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: getting-started.md  project-summary.md
examples/: example_loan_workflow.py
scripts/: demo.py  demo_architecture.py  demo_models.py  run.py
src/losa/: __init__.py  main.py
src/losa/api/: loan_routes.py
src/losa/chains/: __init__.py  document_chain.py
src/losa/database/: config.py  models.py
src/losa/models/: __init__.py  loan.py
src/losa/services/: loan_service.py
src/losa/workflows/: __init__.py  loan_workflow.py
tests/: test_loan_service.py
